Sorting out AMP errors

--- a/content/about.html
+++ b/content/about.html
@@ -2,8 +2,7 @@
 <section class="lft-clmn">
 <h2>About</h2>
 <figure>
-	<img src="images/about-pg/me-thailand.jpg" class="image image-big center" alt="Alessandro resting on an hammock" title="Alessandro resting on an hammock">
-	<figcaption class="pic-capt txt-center">"Resting on an hammock in Koh Phagnan - Thailand"</figcaption>
+	<amp-img src="images/about-pg/me-thailand.jpg" class="image image-big center" alt="Alessandro resting on an hammock" title="Alessandro resting on an hammock" width="650" height="430" layout="responsive"></amp-img>
 </figure>
 <p>Greetings to my fellow travellers &amp; dreamers!<br />
 	<br />I initially would like to apologise for any grammar or misspelling mistakes; English is not my native language and I'm really trying my best here!<br />
@@ -17,8 +16,7 @@
 	This charming little village was built on the top of a hill in the middle of the "Roero", an extensive wine production area which along with the more famous "Langhe" has recently become part of the UNESCO heritage.<br />
 </p>
 <figure>
-	<img src="images/about-pg/baldissero.jpg" class="image image-big center" alt="Baldissero d'Alba, Alessandro's native village." title="Baldissero d'Alba">
-	<figcaption class="pic-capt txt-center">"Baldissero d'Alba, my native village."</figcaption>
+	<amp-img src="images/about-pg/baldissero.jpg" class="image image-big center" alt="Baldissero d'Alba, Alessandro's native village." title="Baldissero d'Alba" width="650" height="200" layout="responsive"></amp-img>
 </figure>
 <p>	
 	Although it might look like a lovely place to live in, ever since my early 20s I felt a little bit trapped; my daily routine was boring and the future did not look as bright as I was wishing.<br />
@@ -37,16 +35,14 @@
 	<br />This had been the best decision I've ever made so far...<br />
 </p>
 <figure>
-	<img src="images/about-pg/me-sydney.JPG" class="image image-med center" alt="Alessandro on a ferry to Manly, Sydney harbour" title="Alessandro on a ferry to Manly">
-	<figcaption class="pic-capt txt-center">"Cruising to Manly, Sydney - NSW"</figcaption>
+	<amp-img src="images/about-pg/me-sydney.JPG" class="image image-med center" alt="Alessandro on a ferry to Manly, Sydney harbour" title="Alessandro on a ferry to Manly" width="650" height="500" layout="responsive"></amp-img>
 </figure>
 <p>	
 	I consider the first Working Holiday Visa the best year of my life and, if you are not Australian, you are between 18 and 30 yo and from an eligible country, I definitely encourage you to do it! It's a "once in a lifetime" opportunity! (<a href="https://www.homeaffairs.gov.au/trav/visa-1/417-" target="_blank" class="parag-link">CLICK HERE </a>to know more and apply)<br /> 
 	During this year I lived mostly in Adelaide and South Australia, where for 5 months I experienced the regional work due to be eligible for a second WHV. I've met amazing people from all around the globe, strangers who are part of the most precious memories I store deep inside, like playing guitar and singing around a fire on the beach, or playing cards and talking about experiences in a hostel you just got in and that you might leave the day after; others I'm still in touch with and that I hope to see again in the world somewhere very soon!<br />
 </p>
 <figure>
-	<img src="images/about-pg/farm-work.JPG" class="image image-med center" alt="Alessandro with his fellow farm workers" title="Australia fark works">
-	<figcaption class="pic-capt txt-center">"Planting almonds in Renmark - SA."</figcaption>
+	<amp-img src="images/about-pg/farm-work.JPG" class="image image-med center" alt="Alessandro with his fellow farm workers" title="Australia fark works" width="650" height="500" layout="responsive"></amp-img>
 </figure>
 <p>
 	As you know, time flies when you are having fun!<br />
@@ -60,8 +56,7 @@
 	<br />The cherry on my Australian adventure arrived few months ago, as I became an Australian Citizen.<br />
 </p>
 <figure>
-	<img src="images/about-pg/me-citizen.jpg" class="image image-med center" alt="Alessandro with the Australian flag just after his Citizenship ceremony" title="Alessandro with the Australian flag">
-	<figcaption class="pic-capt txt-center">"Australian Citizens!!!"</figcaption>
+	<amp-img src="images/about-pg/me-citizen.jpg" class="image image-med center" alt="Alessandro with the Australian flag just after his Citizenship ceremony" title="Alessandro with the Australian flag" width="650" height="500" layout="responsive"></amp-img>
 </figure>
 <p>
 	Today I'm still working for my "Australian family", building the foundation to realise a dream I've got in my bedside drawer... Travel the World while working off a laptop<br />
