--- a/content/index.html
+++ b/content/index.html
@@ -68,7 +68,7 @@
 		<h2>Travel Tips Blog</h2>
 		<section class="blog-box center content">
 			<h3>Travel experiencing locals: AirBnB</h3>
-			<img src="images/blog-pg/airbnb-pg/airbnb.jpg" class="image image-med center" alt="AirBnB unit in Porto - Portugal" title="AirBnB unit in Porto">
+			<amp-img src="images/blog-pg/airbnb-pg/airbnb.jpg" class="image image-med center" alt="AirBnB unit in Porto - Portugal" title="AirBnB unit in Porto" width="650" height="430" layout="responsive"></amp-img>
 			<p>
 				AirBnB is a creative company who has basically created a worldwide accomodation community: they allowed normal people like me and you, with extra rooms at their places, or extra properties, to actually rent them out as holiday accomodations, and viceversa, travelers like us to experience their holiday in a different way, by living with or being in touch with a local...
 			</p>
@@ -83,7 +83,7 @@
 		</section>
 		<section class="blog-box center content">
 			<h3>A smart way to exchange-transfer money and pay while travelling: Transferwise</h3>
-			<img src="images/blog-pg/transferwise-pg/balance-pg.jpg" class="image image-med center" alt="Transferwise account balance page" title="Transferwise balance home page">
+			<amp-img src="images/blog-pg/transferwise-pg/balance-pg.jpg" class="image image-med center" alt="Transferwise account balance page" title="Transferwise balance home page" width="650" height="430" layout="responsive"></amp-img>
 			<p>
 				Good news World travellers!<br />
 				Since 2011 Transferwise has revolutionised our relationship with different worldwide currencies, offering a very simple and, most important, extremely convenient way to manage international transfers, exchanges and payments.<br />
