1 error left on main pages (styles.css)

--- a/content/contact.html
+++ b/content/contact.html
@@ -2,7 +2,7 @@
 <section class="lft-clmn">
 	<div class="form-content center">
 		<h2>Contact Me</h2>
-		<form action="mail/form-validation.php" method="post" id="contactForm">
+		<form action-xhr="mail/form-validation.php" method="post" id="contactForm">
 			<fieldset>
 				<!-- <img src="images/contact-pg/mail-boxes.jpg" class="image image-med center" alt="mail-boxes"> -->
 				<p>Fields marked with an <span class="star">*</span> are required.</p>
@@ -29,26 +29,6 @@
 				<div class="sbmt"><input type="submit" value="Submit" id="submit" class="bttn" accesskey="S"></div>
 			</fieldset>
 		</form>
-		<br >
-		<hr>
-		<br />
-		<div id="hcard-Alessandro-C." class="vcard">
-			<h3>vCard</h3>
-			<br />
-			<div class="nam"><p>Alessandro C.</p></div>
-			<div class="org"><p><a class="url fn parag-link" href="https://worlderland.com/">Worlderland.com</a></p></div>
-			<div class="adr">
-				<p><span class="locality">Perth</span>
-				, 
-				<span class="region">Western Australia</span>
-				, 
-				<span class="postal-code">6000</span>
-				,
-				<span class="country-name">Australia</span>
-				</p>
-			</div>
-		    <div><p><span class="category">Travel tips</span></p></div>
-		</div>
 	</div>
 </section>
 						
