Cleared all the errors. Site completely converted to AMP.

--- a/content/airbnb.html
+++ b/content/airbnb.html
@@ -2,7 +2,7 @@
 <article class="lft-clmn">
 <h2>Travel experiencing &amp; enjoying locals with AirBnB</h2>
 <figure>
-	<img src="images/blog-pg/airbnb-pg/airbnb.jpg" class="image image-big center" alt="AirBnB unit in Porto - Portugal" title="AirBnB unit in Porto">
+	<amp-img src="images/blog-pg/airbnb-pg/airbnb.jpg" class="image image-big center" alt="AirBnB unit in Porto - Portugal" title="AirBnB unit in Porto" width="650" height="430" layout="responsive"></amp-img>
 	<figcaption class="pic-capt txt-center">"The lovely unit where my family and I stayed while visiting Porto in 2017 - Portugal"</figcaption>
 </figure>
 <p>G'day fellow travellers! <br />
@@ -14,7 +14,7 @@
 </p>
 <h3>Friends travellers referral program</h3>
 <figure>
-	<img src="images/blog-pg/airbnb-pg/share-airbnb-link.jpg" class="image image-big center" alt="AirBnB traveller sign-up link sharing page" title="AirBnB traveller sign-up link sharing page">
+	<amp-img src="images/blog-pg/airbnb-pg/share-airbnb-link.jpg" class="image image-big center" alt="AirBnB traveller sign-up link sharing page" title="AirBnB traveller sign-up link sharing page" width="650" height="430" layout="responsive"></amp-img>
 	<figcaption class="pic-capt txt-center">"My AirBnB traveller sign-up link sharing page."</figcaption>
 </figure>
 <p>
@@ -31,7 +31,7 @@
 </p>	 
 <h3>Friends hosts referral program</h3>
 <figure>
-	<img src="images/blog-pg/airbnb-pg/share-host-airbnb-link.jpg" class="image image-big center" alt="AirBnB host sign-up link sharing page" title="AirBnB host sign-up link sharing page">
+	<amp-img src="images/blog-pg/airbnb-pg/share-host-airbnb-link.jpg" class="image image-big center" alt="AirBnB host sign-up link sharing page" title="AirBnB host sign-up link sharing page" width="650" height="430" layout="responsive"></amp-img>
 	<figcaption class="pic-capt txt-center">"My AirBnB host sign-up link sharing page."</figcaption>
 </figure>
 <p>
@@ -44,10 +44,5 @@
 	<br />I hope this article helped you clearing up your mind...<br />
 	<br />Enjoy AirBnB!
 </p>
-<div class="social-bttns-box">
-	<!--===FB buttons===-->
-	<div class="fb-like social-bttns" data-href="https://www.worlderland.com/airbnb.php" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-	<!--===FB buttons===-->
-</div>
 </article>
 						
